[package]
name = "mufin"
version = "0.0.4"
edition = "2021"

[lib]
name="mufin"
crate-type=["cdylib"]

[dependencies]
btleplug = { version = "0.9.2", features = ["serde"] }

log = "0.4.17"
simplelog = "0.12.0"

napi = { version = "2", features = ["async"] }
tokio = "1"
napi-derive = "2"

[build-dependencies]
napi-build = "1"